added virtual joysticks

--- a/webGL build/index.html
+++ b/webGL build/index.html
@@ -59,11 +59,11 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/webGL build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/webGL build.data.gz",
-        frameworkUrl: buildUrl + "/webGL build.framework.js.gz",
-        codeUrl: buildUrl + "/webGL build.wasm.gz",
+        dataUrl: buildUrl + "/webGL build.data",
+        frameworkUrl: buildUrl + "/webGL build.framework.js",
+        codeUrl: buildUrl + "/webGL build.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "JimSoft",
         productName: "Leafsteroids-NG",
         productVersion: "0.1",
         showBanner: unityShowBanner,
